src/objects/Core_Country_State_Reference__c.object
<CustomObject>
    <fields>
        <fullName>Core_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Geo__c</fullName>
        <label>Geo</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_State__c</fullName>
        <label>State</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Sub_Geo__c</fullName>
        <label>Sub Geo</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Country State Reference</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CSRN-{0000}</displayFormat>
        <label>Country State Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Country State Reference</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>